[package]
name = "wgpu-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
glam = "0.24.2"
instant = "0.1.12"
pollster = "0.3.0"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["HtmlCanvasElement"] }
wgpu = { version = "0.17.0", features = ["webgl"] }
winit = "0.28.7"
yew = { version = "0.20.0", features = ["csr"] }
