[package]
name = "wgpu-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.2"
glam = "0.25.0"
instant = "0.1.12"
pollster = "0.3.0"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["HtmlCanvasElement"] }
# wgpu = { version = "0.18.0", features = ["webgl"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", features = ["webgl"] }
winit = "0.29"
yew = { version = "0.21.0", features = ["csr"] }
